# dummy

./: .rhiza.history  README.md  pyproject.toml
.github/: template.yml
.github/rhiza/: template.yml
.github/workflows/: ci-doctor.lock.yml  ci-doctor.md  copilot-setup-steps.yml  daily-team-status.lock.yml  daily-team-status.md  issue-triage.lock.yml  pr-fix.lock.yml  pr-fix.md  sync.yml  update-docs.lock.yml  update-docs.md  weekly-research.lock.yml  weekly-research.md
.rhiza/: history  template.yml
book/marimo/: add.py
tests/benchmarks/: test_example.py
