[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dummy"
version = "6.0.0"
description = "Reusable configuration templates for modern Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Harry Campion" }
]
keywords = ["templates", "configuration", "taskfile", "ci", "ruff"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/HarryCampion/dummy"
Repository = "https://github.com/HarryCampion/dummy"
Issues = "https://github.com/HarryCampion/dummy/issues"

[dependency-groups]
dev = [
    "marimo>=0.18.0",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "pandas>=2.3.3"
]

[tool.marimo.runtime]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
# Use src-layout: package code is under src/dummy
packages = ["src/dummy"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
